                    ---------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
	 
22-10-14 mma (testem11-V10-00-03)
- PhysicsList : added G4EmStandardPhysicsSS
- TestEm11.cc : option set nThreads via command
	 
11-09-14 mma (testem11-V10-00-02)
- TestEm11.cc : SetNumberOfThreads(G4Threading::G4GetNumberOfCores())

22-06-14 mma (testem11-V10-00-01)
- remove PhysicsList::SetCuts(). Update macros

17-12-13 mma (testem11-V10-00-00)
- Run::SetPrimary(particle, ekin)
- Run::EndOfRun()
- Set "ToBeBroadcasted == false" for UI commands that modify physics lsit
  and detector since these should be executed only by master
- HistoManager: remove hbook  
        
21-11-13 A.Dotti      (testem11-V09-06-17)
- Correctly call G4RunManager::ReinitializeGeometry or 
  PhysicsHasBeenModified

21-11-13 A.Dotti      (testem11-V09-06-16)
- Changed to use new interface G4RunManager::ReinitializeGeometry
  (requires at least run-V09-06-128)
- Use G4GlobalMagFieldMessenger to use B-Field 

07-11-13 I.Hrivnacova (testem11-V09-06-15)
- Added setting SteppingVerbose in main in sequential mode

07-11-13 mma (testem11-V09-06-14)
- Removed RunAction::AddEdep()
  
24-10-13 I.Hrivnacova (testem11-V09-06-13)
- Fixed normalization of histograms 1,8
- Removed EventActionMessenger and migration to new 
  /run/printProgress command

30-09-13 I.Hrivnacova 
- Updated for changes in analysis:
  removal of G4AnalysisManager::Create(isMaster)

26-09-13 I.Hrivnacova 
- Migration to MT:
  adding ActionInitialization and Run classes
- Removed obsolete option and command for selection of tracks for
  drawing from EventAction, EventActionMessenger

11-07-13 I.Hrivnacova (testem11-V09-06-12) 