@@ -3,6 +3,8 @@
 # limit the step size from histo 1
 #
 /control/verbose 2
+/control/cout/ignoreThreadsExcept 0
+/run/numberOfThreads 2
 /run/verbose 2
 #
 /testem/det/setNbOfAbsor  1
