@@ -15,6 +15,9 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 	 
+23-10-14 mma (testem11-V10-00-04)
+- PhysListEmStandard : msc algorithm fUseSafetyPlus
+
 22-10-14 mma (testem11-V10-00-03)
 - PhysicsList : added G4EmStandardPhysicsSS
 - TestEm11.cc : option set nThreads via command
